# fund_labs

./: CMakeLists.txt  README.md  lab1_1  lab1_10  lab1_3  lab1_4  lab1_7  lab1_8  lab1_9_1  lab1_9_2  lab2_1  lab2_2
lab1/task1/: task1.c
lab1/task10/: task10.c
lab1/task2/: task2.c
lab1/task3/: task3.c
lab1/task4/: file_input.txt  out_file_input.txt  task4.c
lab1/task5/: task5.c
lab1/task6/: task6.c
lab1/task7/: file1.txt  task7.c
lab1/task8/: in.txt  out.txt  task8.c
lab1/task9/: task9_1.c  task9_2.c
lab2/task1/: task1.c
lab2/task10/: task10.c
lab2/task2/: task2.c
lab2/task7/: task7.c
lab2/task9/: task9.c
lab3/task1/: task1.c
lab3/task10/: output.txt  task10.c
lab3/task3/: input.txt  output.txt  task3.c
lab5/task3/: task3.cpp
lab5/task4/: task4.cpp
