cmake_minimum_required(VERSION 3.27)
project(fund_labs C)

set(CMAKE_C_STANDARD 11)

add_executable(laba1.1 lab1/task1/task1.c)

add_executable(laba1.3 lab1/task3/task3.c)

add_executable(laba1.4 lab1/task4/task4.c)

add_executable(laba1.7 lab1/task7/task7.c)

add_executable(laba1.8 lab1/task8/task8.c)

add_executable(laba1.9.1 lab1/task9/task9_1.c)

add_executable(laba1.9.2 lab1/task9/task9_2.c)

add_executable(laba1.10 lab1/task10/task10.c)

add_executable(laba2.1 lab2/task1/task1.c)

add_executable(laba2.2 lab2/task2/task2.c)

add_executable(laba2.7 lab2/task7/task7.c)

add_executable(laba2.9 lab2/task9/task9.c)

add_executable(laba1.6 lab1/task6/task6.c)
